compiler/typ/tests/fixtures/diagnostics/0050_core_and_int_05.ml.infer.expected
File "0050_core_and_int_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0050_core_and_int_05 is not a valid module name.

File "0050_core_and_int_05.ml", line 2, characters 37-38:
2 | let _ = let shadow = true in true && 0
                                         ^
Error: The constant 0 has type int but an expression was expected of type
         bool
